Add JVM flags to AndroidUnitTest
This is to allow Robolectric tests to
run when the project is targetting JDK 17
or higher.
Users have been mitigating this issue by
adding these flags manually to their projects.

Bug: 248929512
Test: verified manually
Change-Id: I9e417184af53b5d4195d359a9d2f9d4b29575647